--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <div id="div2">
        <h2 class="h2">Recent heroic Acts</h2>
     <!-- for paragraph -->
-    <p id="para1">Why did Iron Man have to die? His sacrifice was a key part of saving the universe in <a href="https://screenrant.com/tag/the-avengers-4/">Avengers: Endgame</a> , and the universe may have had no other choice –<a href="https://screenrant.com/tag/iron-man/"> Iron Man</a> may have been the real threat all along. Robert Downey Jr.'s genius billionaire playboy philanthropist was the face of the Marvel Cinematic Universe for over a decade. Iron Man launched the MCU back in 2008 and played a pivotal role in what is now known as the Infinity Saga. He proved to be one of the MCU franchise's greatest heroes and put his life on the line multiple times before paying the ultimate price in Avengers: Endgame.
+    <p id="para1">Why did Iron Man have to die? His sacrifice was a key part of saving the universe in <a href="https://screenrant.com/tag/the-avengers-4/" target="_blank">Avengers: Endgame</a> ,Iron Man and the universe may have had no other choice  may have been the real threat all along. Robert Downey Jr.'s genius billionaire playboy philanthropist was the face of the Marvel Cinematic Universe for over a decade.<a href="https://screenrant.com/tag/iron-man/" target="_blank"> Iron Man</a> launched the MCU back in 2008 and played a pivotal role in what is now known as the Infinity Saga. He proved to be one of the MCU franchise's greatest heroes and put his life on the line multiple times before paying the ultimate price in Avengers: Endgame.
         <br>
         <br>
         <br>
-        <a href="https://www.1stkissmanga.us/blog/endgame-theory-why-iron-man-had-to-die-to-save-the-universe">Read  More</a>
+        <a href="https://www.1stkissmanga.us/blog/endgame-theory-why-iron-man-had-to-die-to-save-the-universe" target="_blank">Read  More</a>
     </p>
     </div>
 
